--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Scala CI
 
 on:
@@ -13,6 +8,8 @@ on:
 
 permissions:
   contents: read
+  checks: write        # for test results
+  pull-requests: write # for test results
 
 jobs:
   build:
@@ -21,16 +18,29 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Unlock secrets
       uses: sliteteam/github-action-git-crypt-unlock@1.2.0
       env:
         GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
-    - name: Set up JDK 11
+
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '21'
         distribution: 'temurin'
         cache: 'sbt'
+
+    - name: Set up SBT
+      uses: sbt/setup-sbt@v1
+
     - name: Run tests
       # We exclude "CPU" tests which require more memory than is available
       run: sbt 'testOnly -- -l "org.scalatest.tags.CPU"'
+
+    - name: Publish test results
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      if: always()
+      with:
+        files: |
+          target/test-reports/*.xml
